<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient"
    android:orientation="vertical"
    android:weightSum="9"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/text_view_result"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:background="@drawable/button_background"
        android:gravity="center_vertical"
        android:paddingStart="10dp"
        android:text="0"
        android:textColor="@android:color/white"
        android:textSize="48sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="4dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:weightSum="4">

        <Button
            android:id="@+id/reset"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginEnd="4dp"
            android:layout_weight="3"
            android:background="@drawable/button_background"
            android:freezesText="false"
            android:text="Reset"
            android:textAppearance="@style/TextAppearance.AppCompat.Display4"
            android:textColor="@android:color/white"
            android:textSize="24sp" />

        <Button
            android:id="@+id/btn_delete"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/button_background"
            android:text="Delete"
            android:textAppearance="@style/TextAppearance.AppCompat.Display4"
            android:textColor="@android:color/white"
            android:textSize="24sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1.5"
        android:orientation="horizontal"
        android:weightSum="4">

        <Button
            android:id="@+id/btn_seven"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/default_margin"
            android:layout_marginEnd="@dimen/default_margin"
            android:layout_weight="1"
            android:background="@drawable/button_background"
            android:text="7"
            android:textAppearance="@style/TextAppearance.AppCompat.Display4"
            android:textColor="@android:color/white"
            android:textSize="30sp" />

        <Button
            android:id="@+id/btn_eight"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/default_margin"
            android:layout_marginEnd="@dimen/default_margin"
            android:layout_weight="1"
            android:background="@drawable/button_background"
            android:text="8"
            android:textAppearance="@style/TextAppearance.AppCompat.Display4"
            android:textColor="@android:color/white"
            android:textSize="30sp" />

        <Button
            android:id="@+id/btn_nine"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/default_margin"
            android:layout_marginEnd="@dimen/default_margin"
            android:layout_weight="1"
            android:background="@drawable/button_background"
            android:text="9"
            android:textAppearance="@style/TextAppearance.AppCompat.Display4"
            android:textColor="@android:color/white"
            android:textSize="30sp" />

        <Button
            android:id="@+id/btn_divide"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/default_margin"
            android:layout_weight="1"
            android:background="@drawable/button_background"
            android:text="@string/divide"
            android:textAppearance="@style/TextAppearance.AppCompat.Display4"
            android:textColor="@android:color/white"
            android:textSize="30sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1.5"
        android:orientation="horizontal"
        android:weightSum="4">

        <Button
            android:id="@+id/btn_four"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/default_margin"
            android:layout_marginEnd="@dimen/default_margin"
            android:layout_weight="1"
            android:background="@drawable/button_background"
            android:text="4"
            android:textAppearance="@style/TextAppearance.AppCompat.Display4"
            android:textColor="@android:color/white"
            android:textSize="30sp" />

        <Button
            android:id="@+id/btn_five"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/default_margin"
            android:layout_marginEnd="@dimen/default_margin"
            android:layout_weight="1"
            android:background="@drawable/button_background"
            android:text="5"
            android:textAppearance="@style/TextAppearance.AppCompat.Display4"
            android:textColor="@android:color/white"
            android:textSize="30sp" />

        <Button
            android:id="@+id/btn_six"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/default_margin"
            android:layout_marginEnd="@dimen/default_margin"
            android:layout_weight="1"
            android:background="@drawable/button_background"
            android:text="6"
            android:textAppearance="@style/TextAppearance.AppCompat.Display4"
            android:textColor="@android:color/white"
            android:textSize="30sp" />

        <Button
            android:id="@+id/btn_multiply"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/default_margin"
            android:layout_weight="1"
            android:background="@drawable/button_background"
            android:text="@string/multi"
            android:textAppearance="@style/TextAppearance.AppCompat.Display4"
            android:textColor="@android:color/white"
            android:textSize="30sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1.5"
        android:orientation="horizontal"
        android:weightSum="4">

        <Button
            android:id="@+id/btn_one"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/default_margin"
            android:layout_marginEnd="@dimen/default_margin"
            android:layout_weight="1"
            android:background="@drawable/button_background"
            android:text="1"
            android:textAppearance="@style/TextAppearance.AppCompat.Display4"
            android:textColor="@android:color/white"
            android:textSize="30sp" />

        <Button
            android:id="@+id/btn_two"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/default_margin"
            android:layout_marginEnd="@dimen/default_margin"
            android:layout_weight="1"
            android:background="@drawable/button_background"
            android:text="2"
            android:textAppearance="@style/TextAppearance.AppCompat.Display4"
            android:textColor="@android:color/white"
            android:textSize="30sp" />

        <Button
            android:id="@+id/btn_three"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/default_margin"
            android:layout_marginEnd="@dimen/default_margin"
            android:layout_weight="1"
            android:background="@drawable/button_background"
            android:text="3"
            android:textAppearance="@style/TextAppearance.AppCompat.Display4"
            android:textColor="@android:color/white"
            android:textSize="30sp" />

        <Button
            android:id="@+id/btn_minus"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/default_margin"
            android:layout_weight="1"
            android:background="@drawable/button_background"
            android:text="@string/minus"
            android:textAppearance="@style/TextAppearance.AppCompat.Display4"
            android:textColor="@android:color/white"
            android:textSize="30sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1.5"
        android:orientation="horizontal"
        android:weightSum="4">

        <Button
            android:id="@+id/btn_dot"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/default_margin"
            android:layout_marginEnd="@dimen/default_margin"
            android:layout_weight="1"
            android:background="@drawable/button_background"
            android:text="."
            android:textAppearance="@style/TextAppearance.AppCompat.Display4"
            android:textColor="@android:color/white"
            android:textSize="30sp" />

        <Button
            android:id="@+id/btn_zero"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/default_margin"
            android:layout_marginEnd="@dimen/default_margin"
            android:layout_weight="1"
            android:background="@drawable/button_background"
            android:text="0"
            android:textAppearance="@style/TextAppearance.AppCompat.Display4"
            android:textColor="@android:color/white"
            android:textSize="30sp" />

        <Button
            android:id="@+id/btn_equal"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/default_margin"
            android:layout_marginEnd="@dimen/default_margin"
            android:layout_weight="1"
            android:background="@drawable/button_background"
            android:text="@string/equal"
            android:textAppearance="@style/TextAppearance.AppCompat.Display4"
            android:textColor="@android:color/white"
            android:textSize="30sp" />

        <Button
            android:id="@+id/btn_plus"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/default_margin"
            android:layout_weight="1"
            android:background="@drawable/button_background"
            android:text="@string/plus"
            android:textAppearance="@style/TextAppearance.AppCompat.Display4"
            android:textColor="@android:color/white"
            android:textSize="30sp" />
    </LinearLayout>

</LinearLayout>